--- a/manifest.json
+++ b/manifest.json
@@ -16,9 +16,13 @@
   "content_security_policy": "script-src 'self' https://*.googleapis.com; object-src 'self'",
 
   "content_scripts": [{
+    //"all_frames": true,
+    "matches": ["<all_urls>"],
+    "js": ["lib/api.js"]
+  }, {
     "all_frames": true,
-    "matches": ["<all_urls>"],    
-    "js": ["lib/script.js"]    
+    "matches": ["<all_urls>"],
+    "js": ["lib/run.js"]
   }], 
 
   "browser_action": {
