--- a/manifest.json
+++ b/manifest.json
@@ -11,18 +11,22 @@
     "tabs"
   ],
 
+
+  "tabs": {},
+
   "icons": { "128": "img/icon_128.png" },
 
   "content_security_policy": "script-src 'self' https://*.googleapis.com; object-src 'self'",
 
   "content_scripts": [{
+    //"all_frames": true,
     "matches": ["<all_urls>"],
     "js": ["lib/api.js"]
   }, {
     "all_frames": true,
     "matches": ["<all_urls>"],
     "js": ["lib/run.js"]
-  }], 
+  }],
 
   "browser_action": {
     "default_icon": "img/icon.png",
