--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,9 @@
   "manifest_version": 2,
 
   "name": "Custom JavaScript for websites ",
+  "short_name": "customjs",
   "description": "Run custom JavaScript on any website.",
-  "version": "2.1.0",
+  "version": "2.1.1",
 
   "permissions": [
     "http://*/",
@@ -19,7 +20,6 @@
   "content_security_policy": "script-src 'self' https://*.googleapis.com; object-src 'self'",
 
   "content_scripts": [{
-    //"all_frames": true,
     "matches": ["<all_urls>"],
     "js": ["lib/api.js"]
   }, {
