--- a/manifest.json
+++ b/manifest.json
@@ -7,13 +7,12 @@
   "version": "2.1.2",
 
   "permissions": [
+    "storage",
     "http://*/",
     "https://*/",
     "tabs"
   ],
 
-
-  "tabs": {},
 
   "icons": { "128": "img/icon_128.png" },
 
